HHH-17297 Adapt limited support testing for 6.2